architectures/microservices-gke/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "INGRESS_IP_NAME"
    networking.gke.io/managed-certificates: "frontend-ssl-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
